Cleaning up the newly depreciated master branch.